onboarding/force-app/main/default/objects/Employee__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HR; IT; Finance; Operations; Sales; Marketing</fullName>
                <default>true</default>
                <label>HR; IT; Finance; Operations; Sales; Marketing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>