onboarding/force-app/main/default/objects/Employee__c/fields/Welcome_Message__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Message__c</fullName>
    <label>Welcome Message</label>
    <type>TextArea</type>
</CustomField>