onboarding/force-app/main/default/objects/Employee__c/validationRules/Joining_Date_Cannot_Be_Past.validationRule-meta.xml
<ValidationRule>
    <fullName>Joining_Date_Cannot_Be_Past</fullName>
    <active>true</active>
    <errorConditionFormula>Joining_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Joining_Date__c</errorDisplayField>
    <errorMessage>The joining date cannot be in the past</errorMessage>
</ValidationRule>